fixins svg overlapping on link

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,6 +213,7 @@ footer {
   left: 0px;
   width: 100%;
   height: 350px;
+  margin-bottom: 30px;
   font-family: Arial, sans-serif;
   font-size: 14px;
 }
